metadata/force-app/main/default/objects/CustomName_tHpKG__c/CustomName_tHpKG__c.object-meta.xml
<CustomObject>
    <description>Description_uOkir</description>
    <label>CustomLabel_IQEeV</label>
    <nameField>
        <label>CustomLabel_IQEeV</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_IQEeVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>