metadata/force-app/main/default/objects/CustomName_tHpKG__c/fields/CustomField_rxkyM__c.field-meta.xml
<CustomField>
    <fullName>CustomField_rxkyM__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldJsgKd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>